--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sunrise-service
+  name: sunrise
 spec:
   selector:
     app: sunrise
-  type: LoadBalancer  
   ports:
   - protocol: TCP
-    port: 8000
+    port: 80
     targetPort: 8000
+  type: ClusterIP
