--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: sunrise
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: sunrise
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: sunrise
-        image: public.ecr.aws/h5v6c9w1/sunrise:latest
+        image: saurabh896/sunrise:latest
         ports:
         - containerPort: 8000
